Release history for Joose:

{{ $NEXT }}

    [ENHANCEMENTS]
    
    - platform detection made exception-less
    
    [API CHANGES]

    -none-

    
    [BUG FIXES]
    
    -none-

3.009     2010-06-22 19:21

    [ENHANCEMENTS]
    
    - switched to Dist::Zilla for distribution management
    
    - some speed up of the core PropertySet iterators
    
    - if any value gets returned from `initialize` method, it gets returned as the result of the constructor,
      otherwise the instance itself is returned
      
    - added 'beforeConsumedBy' hook, allowing the property sets to act somehow before being consumed
    
    [API CHANGES]

    -none-

    
    [BUG FIXES]
    
    -none-


3.008   Thu, May 13, 2010

    [ENHANCEMENTS]
    
    - added ability to prefix the namespace declaration with '.' which will switch the current namespace to global
    
    - added ability to specify VERSION and AUTHORITY builders (AUTHORITY is reserved for future use with Jx.N.D)

    - added NodeJS detection

    - exporting created constructors to global NodeJS scope
    
    [API CHANGES]

    -none-
    
    
    [BUG FIXES]
    
    - fixed bug, related to fact, that typeof /a/ == 'function' in WebKit, it was preventing initializing of attributes with regexp  
    


3.007   Wed, Apr 27, 2010 

    [ENHANCEMENTS]
    
    - Class/Role/Module in the global scope aliased as Joose.Class/Joose.Role/Joose.Module
    
    - Joose no longer overwrites the Class/Role/Module symbols in global scope (should allow Prototype support)
    
    - Static instance ('my') now receives a special 'HOST' configuration parameter during instantiation, containing a hosting class constructor
    
    - Static methods are now aliased directly to the host constructor, and can be used without `my`
    
    - returning 'false' from Joose.A/O.each iterators stops the iteration and can be propagated further 
    
    - added `Joose.A.map` helper
    