@@ -36,10 +36,11 @@ Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
             var c           = this.c
             var myProto     = this.myClass.prototype
             
+            Joose.O.eachOwn(c, function (property, name) {
+                if (property.IS_ALIAS) delete c[ name ] 
+            })
+            
             this.myClass.meta.stem.properties.methods.each(function (method, name) {
-                var alias = c[ name ]
-                
-                if (alias && alias.IS_ALIAS) delete c[ name ]
                 
                 if (!c[ name ])
                     (c[ name ] = function () {
@@ -53,13 +54,17 @@ Joose.Managed.My = new Joose.Managed.Role('Joose.Managed.My', {
     override : {
         
         extend : function (props) {
-            if (!this.myClass && this.superClass.meta.myClass) this.createMy(props)
+            var myClass = this.myClass
+            
+            if (!myClass && this.superClass.meta.myClass) this.createMy(props)
             
             if (props.my) {
-                if (!this.myClass) 
+                if (!myClass) 
                     this.createMy(props)
                 else {
-                    this.myClass.meta.extend(props.my)
+                    this.needToReAlias = true
+                    
+                    myClass.meta.extend(props.my)
                     delete props.my
                 }
             }
